src/objects/Negotiation_Profile__c.object
<CustomObject>
    <description>Negotiation Profile information for 2nd Chair</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Full corporate name from agreement</description>
        <inlineHelpText>Please add full corporate name from agreement e.g. Samsung Electronics Company, Ltd.</inlineHelpText>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Negotiation_Account</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Life_Information_1__c</fullName>
        <label>Home Life Information 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Life_Information_2__c</fullName>
        <label>Home Life Information 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Company_Name__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Negotiation Profile</relationshipLabel>
        <relationshipName>Negotiation_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Company_Name__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Negotiation Profile (Key Contact 2)</relationshipLabel>
        <relationshipName>Negotiation_Profile1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Points__c</fullName>
        <description>Identify key pain points, leverage points and trade offs made, or key behaviors; what commercial/legal terms does the company care most about?</description>
        <inlineHelpText>e.g. warranty length huge sticking point, and will trade for limitation of liability; have been burned by our outsourcing partners in past ;company takes extremely long time to turn documents, re-opens up issues when issues previously close</inlineHelpText>
        <label>Key Pain Points or Leverage Points</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_facts_and_information__c</fullName>
        <description>Other facts and information Motorolans might find useful in future negotiations with the company</description>
        <inlineHelpText>e.g. for a distributor deal: MML told the distributor that MML does not pay or reimburse any copyright levies; MML term sheets exclude these. The distributor agreed to exclude them. Keep this message consistent in future negotiations!</inlineHelpText>
        <label>Other facts and information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Negotiation_Style_Behaviors_1__c</fullName>
        <label>Personal Negotiation Style &amp; Behaviors 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Negotiation_Style_Behaviors_2__c</fullName>
        <label>Personal Negotiation Style &amp; Behaviors 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Career_Educational_Information_1__c</fullName>
        <label>Work/Career/Educational Information 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Career_Educational_Information_2__c</fullName>
        <label>Work/Career/Educational Information 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Negotiation Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Other_facts_and_information__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Profile-{000000}</displayFormat>
        <label>Negotiation Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiation Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>